crates/server/tests/grammar/snapshots/r#mod__grammar__alpha050__block_singleline.snap
---
source: tests/grammar/alpha050.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Main(
            (
                "main",
                5..9,
            ),
            None,
            (
                Block(
                    [],
                    [
                        (
                            Echo(
                                (
                                    "echo",
                                    16..20,
                                ),
                                (
                                    Int(
                                        (
                                            4,
                                            21..22,
                                        ),
                                    ),
                                    21..22,
                                ),
                            ),
                            16..22,
                        ),
                    ],
                ),
                10..28,
            ),
        ),
        5..28,
    ),
    (
        Main(
            (
                "main",
                34..38,
            ),
            Some(
                (
                    "args",
                    38..44,
                ),
            ),
            (
                Singleline(
                    (
                        Echo(
                            (
                                "echo",
                                46..50,
                            ),
                            (
                                Var(
                                    (
                                        "args",
                                        51..55,
                                    ),
                                ),
                                51..55,
                            ),
                        ),
                        46..55,
                    ),
                ),
                44..55,
            ),
        ),
        34..55,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    61..62,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    62..63,
                                ),
                            ],
                            [
                                (
                                    Failure(
                                        (
                                            Handle(
                                                (
                                                    "failed",
                                                    64..70,
                                                ),
                                                None,
                                                (
                                                    Block(
                                                        [],
                                                        [
                                                            (
                                                                Echo(
                                                                    (
                                                                        "echo",
                                                                        81..85,
                                                                    ),
                                                                    (
                                                                        Text(
                                                                            [
                                                                                (
                                                                                    Text(
                                                                                        (
                                                                                            "failed",
                                                                                            87..93,
                                                                                        ),
                                                                                    ),
                                                                                    87..93,
                                                                                ),
                                                                            ],
                                                                        ),
                                                                        86..94,
                                                                    ),
                                                                ),
                                                                81..94,
                                                            ),
                                                        ],
                                                    ),
                                                    71..100,
                                                ),
                                            ),
                                            64..100,
                                        ),
                                    ),
                                    64..100,
                                ),
                            ],
                        ),
                        61..100,
                    ),
                ),
                61..100,
            ),
        ),
        61..100,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    105..106,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    106..107,
                                ),
                            ],
                            [
                                (
                                    Failure(
                                        (
                                            Handle(
                                                (
                                                    "failed",
                                                    108..114,
                                                ),
                                                None,
                                                (
                                                    Singleline(
                                                        (
                                                            Echo(
                                                                (
                                                                    "echo",
                                                                    116..120,
                                                                ),
                                                                (
                                                                    Text(
                                                                        [
                                                                            (
                                                                                Text(
                                                                                    (
                                                                                        "failed",
                                                                                        122..128,
                                                                                    ),
                                                                                ),
                                                                                122..128,
                                                                            ),
                                                                        ],
                                                                    ),
                                                                    121..129,
                                                                ),
                                                            ),
                                                            116..129,
                                                        ),
                                                    ),
                                                    114..129,
                                                ),
                                            ),
                                            108..129,
                                        ),
                                    ),
                                    108..129,
                                ),
                            ],
                        ),
                        105..129,
                    ),
                ),
                105..129,
            ),
        ),
        105..129,
    ),
]
