crates/server/tests/grammar/snapshots/r#mod__grammar__alpha050__command_nested_braces.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(r#\"$echo {if true { 1 } else { 0 }}$\"#)"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "echo ",
        ),
        1..6,
    ),
    (
        Token(
            "{",
        ),
        6..7,
    ),
    (
        Token(
            "if",
        ),
        7..9,
    ),
    (
        Token(
            "true",
        ),
        10..14,
    ),
    (
        Token(
            "{",
        ),
        15..16,
    ),
    (
        Token(
            "1",
        ),
        17..18,
    ),
    (
        Token(
            "}",
        ),
        19..20,
    ),
    (
        Token(
            "else",
        ),
        21..25,
    ),
    (
        Token(
            "{",
        ),
        26..27,
    ),
    (
        Token(
            "0",
        ),
        28..29,
    ),
    (
        Token(
            "}",
        ),
        30..31,
    ),
    (
        Token(
            "}",
        ),
        31..32,
    ),
    (
        Token(
            "$",
        ),
        32..33,
    ),
]
