crates/server/tests/grammar/snapshots/r#mod__grammar__alpha050__dollar_dollar_char.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(\"$$x\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
    (
        Token(
            "x",
        ),
        2..3,
    ),
]
